# ivresse_payments_bot

./: .env.example  .gitignore  README.md  pyproject.toml  tickets.xlsx
bot/: main.py
