[tool.poetry]
name = "ivresse_payments_bot"
version = "0.1.0"
description = "A Telegram bot for booking events"
authors = ["soft_kisik"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.14"
aiohttp = "^3.7.4"
python-dotenv = "^0.19.2"
asyncio = "^3.4.3"
pandas = "^1.5.3"
openpyxl = "^3.1.5"
numpy = "1.24.4"


[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^3.9"
black = "^21.5b1"
mypy = "^0.910"
isort = "^5.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
